assets/styles.css
/* 
==============================
SHARED CSS
==============================
*/

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 16px;
    color:  rgb(53, 53, 53);
}

header {
    background-color: #57102C;
    color: antiquewhite;
}

a {
    color: rgb(53, 53, 53);
    text-decoration: none;
}

main,
aside {
    padding: 20px 5%;
}

h1, 
h2, 
h3 {
    margin-top: 10px;
    margin-bottom: 20px;
}

p {
    margin-bottom: 15px;
}

img {
    max-width: 100%;
    max-height: fit-content;
}

/* 
==============================
CSS OUTER GRID STYLES
==============================
 */

.outer-grid {
    display: grid;
    height: 100vh;
    background-color: antiquewhite;
    grid-template-rows: 70px 1fr;
    grid-template-columns: 90px 1fr;
    grid-template-areas: 
        "named-header named-header"
        "named-innerGrid named-innerGrid";
}

.outer-grid-expanded {
    grid-template-areas: 
        "named-header named-header"
        "named-nav named-innerGrid";
}

.hide-nav {
    display: none;
}

header {
    grid-area: named-header;
}

nav {
    grid-area: named-nav;
}

/* 
==============================
CSS INNER GRID CONTAINER STYLES
==============================
 */

.inner-grid {
    overflow-y: scroll;
    display: grid;
    grid-area: named-innerGrid;
    background-color: antiquewhite;
    grid-template-rows: 1fr auto 1fr;
    grid-template-columns: 1fr;
    grid-template-areas: 
        "named-main named-main"
        "named-aside named-aside"
        "named-footer named-footer";
}

main {
    grid-area: named-main;
}

aside {
    grid-area: named-aside;
    background-color: antiquewhite;
}

/* 
==============================
HEADER STYLES
==============================
*/

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 20px;
}

header a {
    color: antiquewhite;
}

.left-header {
    display: flex;
    align-items: center;
}

.fa-bars {
    margin-right: 10px;
}

.fa-bars:hover {
    cursor: pointer;
    opacity: 0.8;
}

.right-header {
    display: flex;
}

.header-link {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 10px;
}

.header-link i {
    font-size: 0.8rem;
}

.header-link a{
    text-decoration: none;
}

.header-link:hover {
    color: #A92159; 
    opacity: 0.8;
    cursor: pointer; 
}

header .logo {
    max-width: 150px;
    max-height: 150px;
    box-shadow: none;
}

/* 
==============================
NAV STYLES
==============================
*/

nav {
    padding-top: 20px;
    border-right: 2px solid rgba(0,0,0,0.1);
}

.nav-link {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 15px;
}

.nav-link a{
    text-decoration: none;
    align-items: center;
}

.nav-link:hover {
    cursor: pointer;
    opacity: 0.8;
    color: #57102C; 
}

.nav-link:hover::after {
    width: 75%;
    left: 0;
}

.nav-link::after {
    content: "";
    display: block;
    height: 2px;
    background: #57102C;
    left: 50%;
    width: 0;
    bottom: -4px;
    transition: width 0.3s ease, left 0.3s ease;
} 


/* 
==============================
GRID STYLES
==============================
*/

.collage {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 10px;
    grid-template-areas: 
        "collage-2"
        "collage-1"
        "collage-3";
    
}

.collage-1 {
    grid-area: collage-1;
    position: relative;
}

.collage-2 {
    grid-area: collage-2;
    position: relative;
}

.collage-3 {
    grid-area: collage-3;
    position: relative;
}

.image-link {
    display: block;
    width: 100%;
    height: 100%;
    overflow: hidden; 
}

.collage img {
    width: 100%;
    height: 100%;
    object-fit: cover;

}


main h3 {
    position: absolute;
    z-index: 3;
    top: 5%;
    padding: 20px;
    left: 0%;
    width: 100%;
    text-align: center;
    background-color: #4ca8a0b4; 
    color: antiquewhite;
    justify-content: center;
}




/* 
==============================
ASIDE STYLES
==============================
*/

aside img {
    border-radius: 5px;
    box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.2);
}

.image-container {
    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: 1fr 40px 1fr 40px 1fr;
    align-items: center;
}

.image-tom1 {
    grid-area: image-tom1;
    grid-column-start: 1;
    grid-column-end: 3;
    z-index: 1;
    transform: rotate(-4deg);
}

.image-tom2 {
    grid-area: image-tom2;
    grid-column-start: 2;
    grid-column-end: 5;
    z-index: 2;
    box-shadow: 2px 4px 10px 2px rgba(0,0,0,0.5);
}

.image-tom3 {
    grid-area: image-tom3;
    grid-column-start: 4;
    grid-column-end: 6;
    z-index: 1;
    transform: rotate(4deg);
}

.grid-item img.expanded {
    transform: scale(2); 
  }

aside {
    border-top: 2px solid rgba(0,0,0,0.1);
}

/* 
==============================
CSS FOOTER STYLES
==============================
 */

footer {
    grid-area: named-footer;
}

.footer {
    grid-area: named-footer;
    width: 100%;
    bottom: 0;
    background: linear-gradient(to right, #A92159, #57102C);
    color: antiquewhite;
    padding: 25px 0;
    border-top-left-radius: 100px;
    font-size: 15px;
    line-height: 20px;
}

.col {
    width: 85%;
}

.row {
    width: 85%;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: space-between;
}

.copyright {
    text-align: center;
    padding: 0;
    margin: 0;
    font-size: 10px;
}

.col h3 {
    padding: 0;
    margin-left: 0;
    width: fit-content;
    margin-bottom: 10px;
    position: relative;
}

.customList {
    padding: 0px;
    padding-top: 10px;
    margin-left: 0;
    list-style: none;
}

ul li {
    list-style: none;
    margin-bottom: 12px;
    display: inline-block;
    
}

ul li a{
    text-decoration: none;
    color: antiquewhite;   
}

.footerLink:hover {
    color: #57102C; 
    cursor: pointer; 
}

.footerLink:hover::after {
    width: 100%;
    left: 0;
}

.footerLink::after {
    content: "";
    position: relative;
    display: block;
    height: 2px;
    background: #57102C;
    left: 50%;
    width: 0;
    bottom: -4px;
    transition: width 0.3s ease, left 0.3s ease;
}

form {
    padding-top: 15px;
    padding-bottom: 15px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    border-bottom: 1px solid antiquewhite;
    margin-bottom: 10px;
}

form .fa-regular {
    font-size: 18px;
    margin-right: 10px;
}

form input {
    width: 100%;
    background: transparent;
    color: antiquewhite;
    border: 0;
    outline: none;
}

form button {
    background: transparent;
    border: 0;
    outline: none;
    cursor: pointer;
}

form button .fa-solid {
    font-size: 16px;
    color: antiquewhite;
}

.underline {
    width: 100%;
    height: 5px;
    background: #767676;
    border-radius: 3px;
    position: absolute;
    top: 25px;
    left: 0;
    overflow: hidden;
}

.underline span {
    width: 15px;
    height: 100%;
    background: antiquewhite;
    border-radius: 3px;
    position: absolute;
    top: 0;
    left: 10px;
    animation: moving 2s linear infinite;
} 

/* 
==============================
KEYFRAMES
==============================
*/

@keyframes moving {
    0% {
        left: -20px;
    }
    100% {
        left: 100%;
    }
}

@media (max-width: 700px){
    footer {
        bottom: unset;
    }
    .col {
        flex-basis: 100%;
    }
    .col:nth-child(1) {
        flex-basis: 100%;
    }
}

/* 
==============================
BREAKPOINTS
==============================
*/

@media (min-width: 576px){
    nav {
        display: block !important;
    }

    .outer-grid {
        grid-template-areas: 
        "named-header named-header"
        "named-nav named-innerGrid";
    }

    .col {
        flex-basis: 50%;
    }

    header .fa-bars {
        display: none;
    }

    .collage {
        display: grid;
        grid-template-columns: 1fr 1fr;
        max-height: 500px;
        grid-template-rows: 1fr 1fr;
        gap: 10px; 
        grid-template-areas: 
        "collage-2 collage-2"
        "collage-3 collage-1";       
    }
    
    .collage-1 {
        grid-area: collage-1;

    }
    
    .collage-2 {
        grid-area: collage-2;

    }
    
    .collage-3 {
        grid-area: collage-3;

    }

    .image-link {
        display: block;
        width: 100%;
        height: 100%;
        overflow: hidden; 
    }
    
    .collage img {
        width: 100%;
        height: 100%;
        object-fit: cover;
    
    }
    
    
    main h3 {
        position: absolute;
        z-index: 3;
        top: 5%;
        padding: 20px;
        left: 0%;
        width: 100%;
        text-align: center;
        background-color: #4ca8a0b4; 
        color: antiquewhite;
        justify-content: center;
    }
    
}

@media (min-width: 992px){
    .inner-grid {
        grid-template-rows: 1fr 60px;
        grid-template-columns: minmax(auto, 700px) 1fr;
        grid-template-areas: 
            "named-main named-aside"
            "named-footer named-footer";
    }

    aside {
        border-left: 2px solid rgba(0,0,0,0.1);
    }
}

@media (min-width: 1440px){
    .outer-grid {
        grid-template-columns: 1fr 1200px 1fr;
        grid-template-areas: 
            "named-header named-header named-header"
            "named-nav named-innerGrid named-innerGrid";
    }

    header {
        display: grid;
        grid-template-columns: 1fr 950px 1fr;
        grid-template-areas: "named-lh . named-rh";
    }

    .left-header {
        grid-area: named-lh;
        justify-self: end;
    }

    .right-header {
        grid-area: named-rh;
        justify-self: start;
    }

    nav {
        display: flex !important;
        flex-direction: column;
        align-items: flex-end;
        padding-right: 15px;
    }

    aside {
        max-width: 600px;
    }

}
/* 
.collage {
    display: grid;
    grid-template-columns: 1fr 40px 1fr 40px 1fr;;
    grid-template-rows: 1fr;
    
}

.collage-1 {
    grid-area: collage-1;
    grid-column-start: 1;
    grid-column-end: 3;
    z-index: 1;
    transform: rotate(-5deg);
}

.collage-2 {
    grid-area: collage-2;
    position: relative;
    grid-column-start: 2;
    grid-column-end: 5;
    z-index: 2;
}

.collage-3 {
    grid-area: collage-3;
    grid-column-start: 4;
    grid-column-end: 6;
    z-index: 1;
    transform: rotate(5deg);
}

.image-link {
    display: block;
    width: 100%;
    height: 100%;
    overflow: hidden; 
}

.collage img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 50%;
}

main .pythonheader {
    position: absolute;
    z-index: 3;
    bottom: 10%;
    left: 20%;
    width: auto;
    text-align: center;
    background-color: #4CA8A1; 
    padding: 0; 
    margin: 0;
}

main h3 {
    position: absolute;
    z-index: 3;
    bottom: 50%;
    left: 20%;
    width: auto;
    text-align: center;
    background-color: #4CA8A1; 

    padding: 0; /* Adjust padding as needed */
    margin: 0; /* Remove default margin */
}
 */

